--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
       <div class="container header__container">
         <img class="logo" src="" alt="Logo" />
         <ul class="header__list">
-          <li><a class="header__list-link">Home</a></li>
-          <li><a class="header__list-link">About</a></li>
-          <li><a class="header__list-link">Service</a></li>
-          <li><a class="header__list-link">Reviews</a></li>
+          <li><a href="#home" class="header__list-link">Home</a></li>
+          <li><a href="#about" class="header__list-link">About</a></li>
+          <li><a href="#service" class="header__list-link">Service</a></li>
+          <li><a href="#reviews" class="header__list-link">Reviews</a></li>
+          <li><a href="#contactus" class="header__list-link">Contact Us</a></li>
         </ul>
       </div>
     </header>
-    <main class="main">
+    <main class="main" id="home">
       <div class="container main__container">
         <div class="main-content">
           <h1 class="main__title">Lorem ipsum dolor sit amet.</h1>
@@ -38,5 +39,79 @@
         <img class="main__img" src="./img/main.png" alt="Main IMG" />
       </div>
     </main>
+    <section class="about" id="about">
+      <div class="container about__container">
+        <img class="main__img" src="./img/main.png" alt="Main IMG" />
+        <div class="about-content">
+          <h1 class="about__title">About Us</h1>
+          <p class="about__text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis
+            voluptatem provident iste nobis non, ipsum impedit natus debitis
+            consequuntur et.
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="reviews" id="reviews">
+      <div class="container reviews__container">
+        <div class="reviews-content">
+          <h1 class="reviews__title">Our Reviews</h1>
+          <p class="reviews__text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis
+            voluptatem provident iste nobis non, ipsum impedit natus debitis
+            consequuntur et.
+          </p>
+          <a href="" class="reviews__btn">Join Discord</a>
+        </div>
+        <img class="reviews__img" src="./img/main.png" alt="Main IMG" />
+      </div>
+    </section>
+    <section class="service" id="service">
+      <div class="container service__container">
+        <h1 class="service__title">Price Range</h1>
+        <ul class="service__list">
+          <li class="service__list-item">
+            <img src="" alt="Service IMG" class="service__item-img" />
+            <h3 class="service__item-title">+10 levels</h3>
+            <p class="service__item-text">
+              +10 levels in hourglass Reaper or Athena
+            </p>
+            <span class="service__item-price">5 euro</span>
+          </li>
+          <li class="service__list-item">
+            <img src="" alt="Service IMG" class="service__item-img" />
+            <h3 class="service__item-title">+10 levels</h3>
+            <p class="service__item-text">
+              +10 levels in hourglass Reaper or Athena
+            </p>
+            <span class="service__item-price">5 euro</span>
+          </li>
+          <li class="service__list-item">
+            <img src="" alt="Service IMG" class="service__item-img" />
+            <h3 class="service__item-title">+10 levels</h3>
+            <p class="service__item-text">
+              +10 levels in hourglass Reaper or Athena
+            </p>
+            <span class="service__item-price">5 euro</span>
+          </li>
+          <li class="service__list-item">
+            <img src="" alt="Service IMG" class="service__item-img" />
+            <h3 class="service__item-title">+10 levels</h3>
+            <p class="service__item-text">
+              +10 levels in hourglass Reaper or Athena
+            </p>
+            <span class="service__item-price">5 euro</span>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <footer class="footer" id="contactus">
+      <div class="container footer__container">
+        <img class="logo" src="" alt="Logo" />
+        <ul class="footer__list">
+          <li><a class="footer__list-link">Join Discord</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
