--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             Under the Black Flag, only true pirates sail. We are a crew of
             experienced pirates who know Sea of Thieves inside and out.
           </p>
-          <button class="main__btn">Get Started</button>
+          <a class="main__btn" href="#service">Get Started</a>
         </div>
         <div class="main__imgs">
           <img class="main__athena" src="./img/athena.png" alt="Athena" />
@@ -49,7 +49,7 @@
     </main>
     <section class="about" id="about">
       <div class="container about__container">
-        <img class="main__img" src="./img/main.png" alt="Main IMG" />
+        <img class="about__img" src="./img/about.png" alt="About IMG" />
         <div class="about-content">
           <h1 class="about__title">About Us</h1>
           <p class="about__text">
@@ -72,9 +72,11 @@
             We take the helm and get the job done — fast, secure, and discreet!
             <br />
             <br />
-            <span>To see our reviews, join our Discord channel.</span>
+            <span>To find reviews, join our Discord channel.</span>
           </p>
-          <a href="" class="reviews__btn">Join Discord</a>
+          <a href="https://discord.gg/hDXBtR5Ar6" class="reviews__btn"
+            >Join Discord</a
+          >
         </div>
         <img class="reviews__img" src="./img/reviews.png" alt="Main IMG" />
       </div>
@@ -82,6 +84,11 @@
     <section class="service" id="service">
       <div class="container service__container">
         <h1 class="service__title">Price Range</h1>
+        <p class="service__text">
+          All orders require full payment before the service is provided. The
+          service will only start after the payment is confirmed. You pay 0.50€
+          per level or 4€ for streak 10
+        </p>
         <ul class="service__list">
           <li class="service__list-item">
             <img
@@ -91,7 +98,7 @@
             />
             <h3 class="service__item-title">+10 levels</h3>
             <p class="service__item-text">+10 PvP levels (Athena or Reaper)</p>
-            <span class="service__item-price">5 euro</span>
+            <span class="service__item-price">5 €</span>
           </li>
           <li class="service__list-item">
             <img
@@ -101,7 +108,7 @@
             />
             <h3 class="service__item-title">+20 levels</h3>
             <p class="service__item-text">+20 PvP levels (Athena or Reaper)</p>
-            <span class="service__item-price">10 euro</span>
+            <span class="service__item-price">10 €</span>
           </li>
           <li class="service__list-item">
             <img
@@ -111,7 +118,7 @@
             />
             <h3 class="service__item-title">+30 levels</h3>
             <p class="service__item-text">+30 PvP levels (Athena or Reaper)</p>
-            <span class="service__item-price">15 euro</span>
+            <span class="service__item-price">15 €</span>
           </li>
           <li class="service__list-item">
             <img
@@ -121,7 +128,7 @@
             />
             <h3 class="service__item-title">+40 levels</h3>
             <p class="service__item-text">+40 PvP levels (Athena or Reaper)</p>
-            <span class="service__item-price">20 euro</span>
+            <span class="service__item-price">20 €</span>
           </li>
           <li class="service__list-item">
             <img
@@ -131,7 +138,7 @@
             />
             <h3 class="service__item-title">+50 levels</h3>
             <p class="service__item-text">+50 PvP levels (Athena or Reaper)</p>
-            <span class="service__item-price">25 euro</span>
+            <span class="service__item-price">25 €</span>
           </li>
           <li class="service__list-item">
             <img
@@ -141,16 +148,24 @@
             />
             <h3 class="service__item-title">+100 levels</h3>
             <p class="service__item-text">+100 PvP levels (Athena or Reaper)</p>
-            <span class="service__item-price">50 euro</span>
+            <span class="service__item-price">50 €</span>
           </li>
         </ul>
+        <a href="https://discord.gg/hDXBtR5Ar6" class="service__btn"
+          >To Buy Join Discord</a
+        >
       </div>
     </section>
     <footer class="footer" id="contactus">
       <div class="container footer__container">
         <a href="#" class="logo">Black Flag</a>
         <ul class="footer__list">
-          <li><a class="footer__list-btn">Join Discord</a></li>
+          <li class="footer__text">Contact Us:</li>
+          <li>
+            <a href="https://discord.gg/hDXBtR5Ar6" class="footer__list-btn"
+              >Join Discord</a
+            >
+          </li>
         </ul>
       </div>
     </footer>
