--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
+    <script src="app.js" defer></script>
     <title>SoT Boost</title>
   </head>
   <body>
     <header class="header">
       <div class="container header__container">
         <a href="#" class="logo">Black Flag</a>
+        <div class="burger">
+          <span class="line1"></span>
+          <span class="line2"></span>
+        </div>
         <ul class="header__list">
           <li><a href="#home" class="header__list-link">Home</a></li>
           <li><a href="#about" class="header__list-link">About</a></li>
