--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
-    <script src="app.js" defer></script>
-    <title>SoT Boost</title>
+    <link rel="icon" href="./img/icon.ico" sizes="32x32" class="favicon" />
+    <script src="./app.js" defer></script>
+    <title>Black Flag</title>
   </head>
   <body>
     <header class="header">
